
    o	print.coefmat() is deprecated in favour of printCoefmat()
	(which is identical apart from the default for na.print which
	is changed from "" to "NA").


INSTALLATION CHANGES

    o	The zlib code in the sources is used unless the external
	version found is at least version 1.1.4 (up from 1.1.3).

    o	The regression checks now have to be passed exactly.


BUG FIXES

    o	pnorm(x, 1,0) does not give NaN anymore;
	also, pnorm(x,m, s=Inf) == lim{s -> Inf} pnorm(x,m,s).
	Similar changes for dnorm(), cf PR#1218.



	**************************************************
	*						 *
	*	       1.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.7.1


BUG FIXES

    o	print.table() has used too much white space in some cases
	in 1.7.0.

    o	selectMethod() failed if `f' was a non-generic and
	optional=TRUE, and gave a confusing error message if
	optional=FALSE.

    o	pchisq(*, ncp) and qchisq(*, ncp) work in more cases for large ncp
	or quantile and give warning or error messages otherwise.

    o	str(x) now also works when x is an "externalptr" (or "weakref").

    o	rbeta(), rf(), and rt() now support infinite parameter values;
	other distributions return NaN instead of NA for such.

    o	Redefining a class is now safer if the new definition
	generates an error (previously some invalid metadata could be
	left behind).

    o	A number of errors are now caught in setClass() that
	previously either went unchecked or waited until new() to
	appear:
	- classes may not contain themselves, directly or indirectly;
	- classes appearing either as slots or as superclasses must
	  themselves be defined;
	- slot names (direct or inherited) must be unique.
	In related changes, prototype() now works as documented, and is the
	recommended way to provide prototype objects.

    o	Sorting an ordered factor would return an unordered one.
	This caused some trouble with panel.superpose (PR#974).
