@@ -11,6 +11,10 @@ CXX = @CXX@
 CXXCPP = @CXXCPP@
 CXXFLAGS = @CXXFLAGS@
 CXXPICFLAGS = @CXXPICFLAGS@
+DYLIB_EXT = @DYLIB_EXT@
+DYLIB_LD = @DYLIB_LD@
+DYLIB_LDFLAGS = @DYLIB_LDFLAGS@
+DYLIB_LINK = $(DYLIB_LD) $(DYLIB_LDFLAGS) $(LDFLAGS)
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
